# Projekt_HPC

./: .gitignore  benchmark_0_unoptimized.csv  benchmark_1_parallel_jacobian.csv  benchmark_2_parallel_system_solve.csv  run_benchmarks.sh
0_unoptimized/: CMakeLists.txt
0_unoptimized/src/: multibody_solver.cpp
1_parallel_jacobian/include/: constraints.hpp  multibody_solver.hpp
1_parallel_jacobian/src/: benchmark.cpp  multibody_solver.cpp
2_parallel_system_solve/: CMakeLists.txt
2_parallel_system_solve/include/: multibody_solver.hpp
2_parallel_system_solve/src/: benchmark.cpp  constraints.cpp  multibody_solver.cpp
parallel_loops/include/: bodies.hpp  multibody_solver.hpp
parallel_loops/src/: bodies.cpp  multibody_system.cpp  quaternion_operations.cpp  tests.cpp
unoptimized/: CMakeLists.txt
unoptimized/include/: bodies.hpp  constraints.hpp  multibody_solver.hpp  multibody_system.hpp  quaternion_operations.hpp
unoptimized/src/: benchmark.cpp  bodies.cpp  bodies_test.cpp  constraints.cpp  multibody_solver.cpp  multibody_system.cpp  quaternion_operations.cpp  tests.cpp
